--- a/article/java/index.html
+++ b/article/java/index.html
@@ -478,10 +478,7 @@ vertical-align:1px;
 <br></p>
 
 <blockquote>
-<p><a href="./article/java/index.html">java</a><br><br>
-<a href="">linux</a><br><br>
-<a href="./article/me.html">me</a><br><br>
-<a href="./article/you.html">you</a><br></p>
+<p><a href="./springmvc/springmvc%E6%90%AD%E5%BB%BA.html">springmvc搭建</a><br></p>
 </blockquote>
 </body>
 </html>
