--- a/article/linux/index.html
+++ b/article/linux/index.html
@@ -474,14 +474,10 @@ vertical-align:1px;
 
 <h6>因为写程序本来就是一个不断追求完美的过程。</h6>
 
-<p><br><br>
-<br></p>
+<p><br></p>
 
 <blockquote>
-<p><a href="./article/java/index.html">java</a><br><br>
-<a href="./article/linux/index.html">linux</a><br><br>
-<a href="./article/me.html">me</a><br><br>
-<a href="./article/you.html">you</a><br></p>
+<p><a href="./commond/chmod.html">chmod</a><br></p>
 </blockquote>
 </body>
 </html>
