--- a/article/linux/commond/文件搜索.html
+++ b/article/linux/commond/文件搜索.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>index</title>
+<title>文件搜索</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
 /* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
@@ -476,10 +476,25 @@ vertical-align:1px;
 
 <p><br></p>
 
+<h2>which</h2>
+
+<h2>whereis</h2>
+
+<h2>locate</h2>
+
+<h6>个人比较喜欢用这种</h6>
+
+<ul>
+<li>语法 locate [fileName]</li>
+</ul>
+
 <blockquote>
-<p><a href="./commond/chmod.html">chmod</a><br><br>
-<a href="./commond/%E6%96%87%E4%BB%B6%E6%90%9C%E7%B4%A2.html">文件搜索</a><br></p>
+<p>速度快，基于数据库查询，但是如果是新建立的文件会查不到，因为还没有更新到数据库中。<br>
+可能得自己手动 <strong><em>updatedb</em></strong> 下<br>
+哪些目录下需要更新数据库可以配置，具体查询 <strong><em>updatedb.conf</em></strong> 文件配置</p>
 </blockquote>
+
+<h2>find</h2>
 </body>
 </html>
 <!-- This document was created with MarkdownPad, the Markdown editor for Windows (http://markdownpad.com) -->
