--- a/article/linux/commond/process.html
+++ b/article/linux/commond/process.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>index</title>
+<title>process</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
 /* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
@@ -468,19 +468,23 @@ vertical-align:1px;
 </style>
 </head>
 <body>
-<h6>世界上并没有完美的程序，</h6>
+<h2>ps -ef | grep [processName]</h2>
 
-<h6>但我们并不因此而沮丧，</h6>
+<ul>
+<li>查看当时的一个进程快照，静态</li>
+</ul>
 
-<h6>因为写程序本来就是一个不断追求完美的过程。</h6>
+<h2>top</h2>
 
-<p><br></p>
+<ul>
+<li>动态显示当时进程的状态</li>
+</ul>
 
-<blockquote>
-<p><a href="./commond/chmod.html">chmod</a><br><br>
-<a href="./commond/%E6%96%87%E4%BB%B6%E6%90%9C%E7%B4%A2.html">文件搜索</a><br><br>
-<a href="./commond/process.html">查看进程</a><br></p>
-</blockquote>
+<h2>htop</h2>
+
+<ul>
+<li>一个查看进程的工具 Ubuntu下可以通过 apt-get install htop 安装</li>
+</ul>
 </body>
 </html>
 <!-- This document was created with MarkdownPad, the Markdown editor for Windows (http://markdownpad.com) -->
