--- a/article/linux/index.html
+++ b/article/linux/index.html
@@ -478,6 +478,7 @@ vertical-align:1px;
 
 <blockquote>
 <p><a href="./commond/chmod.html">chmod</a><br><br>
+<a href="./commond/wc.html">wc</a><br><br>
 <a href="./commond/%E6%96%87%E4%BB%B6%E6%90%9C%E7%B4%A2.html">文件搜索</a><br><br>
 <a href="./commond/process.html">查看进程</a><br></p>
 </blockquote>
