--- a/index.html
+++ b/index.html
@@ -482,6 +482,10 @@ vertical-align:1px;
 <a href="./article/me.html">me</a><br><br>
 <a href="./article/you.html">you</a><br></p>
 </blockquote>
+
+<div style="float:left">
+ <embed src="http://115.28.168.75/hamster.swf"></embed> 
+</div>
 </body>
 </html>
 <!-- This document was created with MarkdownPad, the Markdown editor for Windows (http://markdownpad.com) -->
