--- a/index.html
+++ b/index.html
@@ -483,8 +483,13 @@ vertical-align:1px;
 <a href="./article/you.html">you</a><br></p>
 </blockquote>
 
+<!--
 <div style="float:left">
  <embed src="http://115.28.168.75/hamster.swf"></embed> 
+</div>
+-->
+<div style="float:left">
+ <embed src="http://images.cnblogs.com/cnblogs_com/csharp/clock.swf"></embed> 
 </div>
 </body>
 </html>
