--- a/article/java/tool/tool.html
+++ b/article/java/tool/tool.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>index</title>
+<title>tool</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
 /* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
@@ -468,17 +468,10 @@ vertical-align:1px;
 </style>
 </head>
 <body>
-<h6>世界上并没有完美的程序，</h6>
-
-<h6>但我们并不因此而沮丧，</h6>
-
-<h6>因为写程序本来就是一个不断追求完美的过程。</h6>
-
-<p><br></p>
+<h3>Tool</h3>
 
 <blockquote>
-<p><a href="./springmvc/springmvc%E6%90%AD%E5%BB%BA.html">springmvc搭建</a><br><br>
-<a href="./tool/tool.html">tool</a><br></p>
+<p><a href="./tokenUtil.html">Token获取验证</a><br></p>
 </blockquote>
 </body>
 </html>
