--- a/article/linux/commond/puttySetting.html
+++ b/article/linux/commond/puttySetting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>index</title>
+<title>puttySetting</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
 /* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
@@ -468,13 +468,11 @@ vertical-align:1px;
 </style>
 </head>
 <body>
-<h6 id="-">世界上并没有完美的程序，</h6>
-<h6 id="-">但我们并不因此而沮丧，</h6>
-<h6 id="-">因为写程序本来就是一个不断追求完美的过程。</h6>
-<p></br></p>
-<blockquote>
-<p><a href="./commond/puttySetting.html">putty设置</a></br><br><a href="./commond/chmod.html">chmod</a></br><br><a href="./commond/wc.html">wc</a></br><br><a href="./commond/文件压缩.html">文件压缩</a></br><br><a href="./commond/文件搜索.html">文件搜索</a></br><br><a href="./commond/process.html">查看进程</a></br></p>
-</blockquote>
+<h2 id="putty-">putty 设置</h2>
+<h4 id="1-">1.背景字体色</h4>
+<p><img src="putty-1.png"><br><img src="putty-2.png"></p>
+<h4 id="2-">2.中文可能会乱码问题</h4>
+<p><img src="putty-3.png"></p>
 
 </body>
 </html>
