--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ vertical-align:1px;
 </div>
 -->
 <div style="float:left">
- <embed src="http://images.cnblogs.com/cnblogs_com/csharp/clock.swf"></embed> 
+ <embed src="http://rf.revolvermaps.com/f/g.swf"></embed> 
 </div>
 </body>
 </html>
