--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@ vertical-align:1px;
 </div>
 -->
 <div style="float:left">
- <embed src="http://rf.revolvermaps.com/f/g.swf"></embed> 
+	<!-- <embed src="http://rf.revolvermaps.com/f/g.swf"></embed> -->
+	<img src="blog_haolei.jpeg">
 </div>
 </body>
 </html>
