--- a/article/linux/index.html
+++ b/article/linux/index.html
@@ -473,7 +473,7 @@ vertical-align:1px;
 <h6 id="-">因为写程序本来就是一个不断追求完美的过程。</h6>
 <p></br></p>
 <blockquote>
-<p><a href="./commond/puttySetting.html">putty设置</a></br><br><a href="./commond/chmod.html">chmod</a></br><br><a href="./commond/wc.html">wc</a></br><br><a href="./commond/文件压缩.html">文件压缩</a></br><br><a href="./commond/文件搜索.html">文件搜索</a></br><br><a href="./commond/process.html">查看进程</a></br></p>
+<p><a href="./commond/puttySetting.html">putty设置</a></br><br><a href="./commond/chmod.html">chmod</a></br><br><a href="./commond/wc.html">wc</a></br><br><a href="./commond/文件压缩.html">文件压缩</a></br><br><a href="./commond/文件搜索.html">文件搜索</a></br><br><a href="./commond/process.html">查看进程</a></br><br><a href="./commond/服务器搭建.html">服务器搭建</a></br></p>
 </blockquote>
 
 </body>
