--- a/article/linux/commond/process.html
+++ b/article/linux/commond/process.html
@@ -468,23 +468,20 @@ vertical-align:1px;
 </style>
 </head>
 <body>
-<h2>ps -ef | grep [processName]</h2>
-
+<h2 id="ps-ef-grep-processname-">ps -ef | grep [processName]</h2>
 <ul>
-<li>查看当时的一个进程快照，静态</li>
-</ul>
-
-<h2>top</h2>
-
+<li>查看当时的一个进程快照，静态</li></ul>
+<h2 id="top">top</h2>
 <ul>
-<li>动态显示当时进程的状态</li>
-</ul>
-
-<h2>htop</h2>
-
+<li>动态显示当时进程的状态</li></ul>
+<h2 id="htop">htop</h2>
 <ul>
-<li>一个查看进程的工具 Ubuntu下可以通过 apt-get install htop 安装</li>
-</ul>
+<li>一个查看进程的工具 Ubuntu下可以通过 apt-get install htop 安装</li></ul>
+<hr>
+<p><a href="http://man.linuxde.net/">man</a></p>
+<pre><code class="lang-html">http://man.linuxde.net/
+</code></pre>
+
 </body>
 </html>
 <!-- This document was created with MarkdownPad, the Markdown editor for Windows (http://markdownpad.com) -->
