--- a/article/linux/commond/服务器搭建.html
+++ b/article/linux/commond/服务器搭建.html
@@ -483,6 +483,10 @@ vertical-align:1px;
 </blockquote>
 <p>重启mysql服务 service mysql restart<br>开启mysql服务 service mysql start<br>关闭mysql服务 service mysql stop</p>
 </blockquote>
+<h5 id="5-redis-">5.安装redis &amp; 配置</h5>
+<blockquote>
+<p><strong>5.1</strong> 安装apt-get install redis-server</p>
+</blockquote>
 
 </body>
 </html>
