--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ vertical-align:1px;
 -->
 <div style="float:left">
 	<!-- <embed src="http://rf.revolvermaps.com/f/g.swf"></embed> -->
-	<img src="blog_haolei.jpeg">
+	<!--<img src="blog_haolei.jpeg">-->
 	<img src="hzw.gif">
 </div>
 </body>
