--- a/index.html
+++ b/index.html
@@ -468,33 +468,19 @@ vertical-align:1px;
 </style>
 </head>
 <body>
-<h6>世界上并没有完美的程序，</h6>
-
-<h6>但我们并不因此而沮丧，</h6>
-
-<h6>因为写程序本来就是一个不断追求完美的过程。</h6>
-
-<p><br></p>
-
+<h6 id="-">世界上并没有完美的程序，</h6>
+<h6 id="-">但我们并不因此而沮丧，</h6>
+<h6 id="-">因为写程序本来就是一个不断追求完美的过程。</h6>
+<pre><code>    我喜欢程序员，他们单纯、固执、容易体会到成就感；面对压力，能够挑灯夜战不眠不休；
+    面对困难，能够迎难而上挑战自我。
+    他们也会感到困惑与傍徨，
+    但每个程序员的心中都有一个比尔盖茨或是乔布斯的梦想“用智慧开创属于自己的事业”。
+    我想说的是，其实我是一个程序员
+</code></pre><p></br></p>
 <blockquote>
-<p><a href="./article/java/index.html">java</a><br><br>
-<a href="./article/linux/index.html">linux</a><br><br>
-<a href="./article/me.html">me</a><br><br>
-<!--
-<a href="./article/you.html">you</a><br></p>
--->
+<p><a href="./article/java/index.html">java</a></br><br><a href="./article/linux/index.html">linux</a></br><br><a href="./article/me.html">me</a></br><br><a href="./article/you.html">you</a></br></p>
 </blockquote>
-
-<!--
-<div style="float:left">
- <embed src="http://115.28.168.75/hamster.swf"></embed> 
-</div>
--->
-<div style="float:left">
-	<!-- <embed src="http://rf.revolvermaps.com/f/g.swf"></embed> -->
-	<!--<img src="blog_haolei.jpeg">-->
-	<img src="hzw.gif">
-</div>
+<div style="float:left"><br>    <!-- <embed src="http://rf.revolvermaps.com/f/g.swf"></embed> --><br>    <!--<img src="blog_haolei.jpeg">--><br>    <img src="hzw.gif"><br></div>
 </body>
 </html>
 <!-- This document was created with MarkdownPad, the Markdown editor for Windows (http://markdownpad.com) -->
