--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ vertical-align:1px;
     我想说的是，其实我是一个程序员
 </code></pre><p></br></p>
 <blockquote>
-<p><a href="./article/java/index.html">java</a></br><br><a href="./article/linux/index.html">linux</a></br><br><a href="./article/me.html">me</a></br><br><a href="./article/you.html">you</a></br></p>
+<p><a href="./article/java/index.html">java</a></br><br><a href="./article/linux/index.html">linux</a></br><br><a href="./article/me/index.html">me</a></br><br><a href="./article/you.html">you</a></br></p>
 </blockquote>
 <div style="float:left"><br>    <!-- <embed src="http://rf.revolvermaps.com/f/g.swf"></embed> --><br>    <!--<img src="blog_haolei.jpeg">--><br>    <img src="hzw.gif"><br></div>
 </body>
