--- a/article/me/index.html
+++ b/article/me/index.html
@@ -35,10 +35,18 @@
 			email = email.replace("#", "@");
 		</code>
     </div>
+	<div class="center">
+		<ul class="nav nav-tabs" role="tablist">
+		  <li role="presentation"><a href="javascript:void(0);">Home</a></li>
+		  <li role="presentation"><a href="javascript:void(0);">Profile</a></li>
+		  <li role="presentation"><a href="javascript:void(0);">Messages</a></li>
+		</ul>
+	</div>
     <a href="" class="btt">顶部</a>
     <!-- Js-->
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/plugin.js"></script>
+	<script src="js/blog.js"></script>
   </body>
 </html>
