--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <title>index</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="Shortcut Icon" href="fav.ico">
+<link rel="Bookmark" href="fav.ico">
 <style type="text/css">
 /* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
 /* Author: Nicolas Hery - http://nicolashery.com */
