--- a/article/me/index.html
+++ b/article/me/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>mjchow-homepage</title>
+	
+	<link rel="Shortcut Icon" href="/fav.ico">
+	<link rel="Bookmark" href="/fav.ico">
     <!-- CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/blog.css" rel="stylesheet">
