--- a/article/me/index.html
+++ b/article/me/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="">
     <title>mjchow-homepage</title>
 	
-	<link rel="Shortcut Icon" href="/fav.ico">
-	<link rel="Bookmark" href="/fav.ico">
+	<link rel="Shortcut Icon" href="/blog/fav.ico">
+	<link rel="Bookmark" href="/blog/fav.ico">
     <!-- CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/blog.css" rel="stylesheet">
