--- a/article/linux/index.html
+++ b/article/linux/index.html
@@ -207,14 +207,14 @@ header, .context-menu, .megamenu-content, footer { font-family: "Segoe UI", Aria
 </style>
 </head>
 <body class='typora-export' >
-<div  id='write'  class = 'is-node'><h6><a name='header-c1' class='md-header-anchor '></a>世界上并没有完美的程序，</h6><h6><a name='header-c6' class='md-header-anchor '></a>但我们并不因此而沮丧，</h6><h6><a name='header-c7' class='md-header-anchor '></a>因为写程序本来就是一个不断追求完美的过程。</h6><p></br></p><blockquote><p><a href="./commond/puttySetting.html">putty设置</a></br>
-<a href="./commond/chmod.html">chmod</a></br>
-<a href="./commond/wc.html">wc</a></br>
-<a href="./commond/文件压缩.html">文件压缩</a></br>
-<a href="./commond/文件搜索.html">文件搜索</a></br>
-<a href="./commond/process.html">进程</a></br>
-<a href="./commond/服务器搭建.html">服务器搭建</a></br>
-<a href="./commond/git.html">git命令以及配置</a></br>
-<a href="./commond/linux-mint.html">linuxMint配置</a></br></p></blockquote></div>
+<div  id='write'  class = 'is-node'><h6><a name='header-c1' class='md-header-anchor '></a>世界上并没有完美的程序，</h6><h6><a name='header-c6' class='md-header-anchor '></a>但我们并不因此而沮丧，</h6><h6><a name='header-c7' class='md-header-anchor '></a>因为写程序本来就是一个不断追求完美的过程。</h6><blockquote><p><a href="./commond/puttySetting.html">putty设置</a>
+<a href="./commond/chmod.html">chmod</a>
+<a href="./commond/wc.html">wc</a>
+<a href="./commond/文件压缩.html">文件压缩</a>
+<a href="./commond/文件搜索.html">文件搜索</a>
+<a href="./commond/process.html">进程</a>
+<a href="./commond/服务器搭建.html">服务器搭建</a>
+<a href="./commond/git.html">git命令以及配置</a>
+<a href="./commond/linux-mint.html">linuxMint配置</a></p></blockquote><p></p></div>
 </body>
 </html>
