--- a/article/linux/index.html
+++ b/article/linux/index.html
@@ -323,6 +323,6 @@ header, .context-menu, .megamenu-content, footer { font-family: "Segoe UI", Aria
 <a href="./commond/文件压缩.html">文件压缩</a>
 <a href="./commond/文件搜索.html">文件搜索</a>
 <a href="./commond/process.html">进程</a>
-<a href="./commond/服务器搭建.html">服务器搭建</a></p><p><a href="./commond/git.html">git命令以及配置</a></p><p><a href="./commond/linux-mint.html">linuxMint配置</a></p><p><a href="./commond/mysql.html">mysql命令</a></p><p><a href="./commond/shadowsocks.html">shadowsocks搭建</a></p><p><a href="./commond/iptables">iptables</a></p><p><a href="./commond/crontab">crontab</a></p><p><a href="./google-authenticator.html">安装google-authenticator</a></p></blockquote></div>
+<a href="./commond/服务器搭建.html">服务器搭建</a></p><p><a href="./commond/git.html">git命令以及配置</a></p><p><a href="./commond/linux-mint.html">linuxMint配置</a></p><p><a href="./commond/mysql.html">mysql命令</a></p><p><a href="./commond/shadowsocks.html">shadowsocks搭建</a></p><p><a href="./commond/iptables">iptables</a></p><p><a href="./commond/crontab">crontab</a></p><p><a href="./commond/google-authenticator.html">安装google-authenticator</a></p></blockquote></div>
 </body>
 </html>
